--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "dependencies": {
         "@headlessui/vue": "^1.6.6",
         "daisyui": "^2.18.1",
+        "laravel-vue-i18n": "^2.1.0",
         "laravel-vue-pagination": "^3.0.0",
         "material-icons": "^1.11.4",
+        "vue-i18n": "^9.1.10",
         "vue3-promise-dialog": "^0.3.4",
         "vuejs-confirm-dialog": "^0.4.1"
     }
